kasane-macros/tests/fail/component_no_return.rs
use kasane_core::kasane_component;

#[kasane_component]
fn bad_component(name: &str) {
    let _ = name;
}

fn main() {}
